# corsework6.1.1

./: README.md  attempt.json  groups.json  mailing.json  pyproject.toml
blog/: admin.py  forms.py  models.py  services.py  views.py
blog/migrations/: 0001_initial.py  0002_alter_blog_date_publication.py
blog/templates/blog/: base.html  blog_confirm_delete.html  blog_detail.html  blog_form.html  blog_list.html
blog/templates/blog/includes/: inc_menu.html
config/: settings.py  urls.py
mailing/: admin.py  apps.py  forms.py  models.py  services.py  task.py  urls.py  views.py
mailing/management/commands/: apsch.py
mailing/migrations/: 0001_initial.py  0002_alter_mailing_next_send_time.py  0003_alter_mailing_options.py  0004_alter_client_options_alter_mailing_options_and_more.py  0005_client_owner_mailing_owner_message_owner_and_more.py  0006_alter_client_options_alter_mailing_options_and_more.py  0007_remove_mailing_client_alter_mailing_message_and_more.py
mailing/templates/mailing/: attempt_detail.html  attempt_list.html  base.html  client_confirm_delete.html  client_detail.html  client_list.html  index.html  mailing_confirm_delete.html  mailing_detail.html  mailing_form.html  mailing_list.html  message_confirm_delete.html  message_detail.html  message_list.html
users/: forms.py  models.py  urls.py  views.py
users/management/commands/: csu.py  fill.py
users/migrations/: 0001_initial.py
users/templates/: login.html
users/templates/users/: password_reset.html  profile.html  profile_form.html  user_form.html
(+1 files in other folders)
